[package]
authors = ["esniff@gmail.com"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
description = "rusty-camino"
edition = "2018"
homepage = ""
keywords = []
license = "MIT"
name = "rusty-camino"
publish = false
readme = "README.md"
repository = ""
version = "0.1.0"

[dependencies]
async-trait = "0.1.51"
bytes       = "0.5"
chrono = "0.4"
colored = "1.9"
dotenv = "0.15.0"
fern = "0.5"
hyper = "0.13"
lazy_static = "1.4.0"
reqwest = { version = "0.10", features = ["json"] }
routerify = "1.1"
routerify-cors = "1.1"
routerify-json-response = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "^0.13"
tokio = { version = "0.2", features = ["full"] }
url = "2.1"
uuid = { version = "0.8", features = ["v4"] }
dashmap                = "^3"
log = "*"
log4rs = "1.0.0"
env_logger = "0.9.0"
